--- a/src/pages/templates/pages/home.html
+++ b/src/pages/templates/pages/home.html
@@ -12,7 +12,7 @@
         <p><a href="{% url 'logout' %}">Logout</a></p>
     {% else %}
         <p>You are not logged in</p>
-        <p><a href="{% url 'login' %}"></a>Login</p>
+        <p><a href="{% url 'login' %}">Login</a></p>
         <p><a href="{% url 'users:signup' %}">Signup</a></p>
 
     {% endif %}
