--- a/src/pages/templates/pages/home.html
+++ b/src/pages/templates/pages/home.html
@@ -1,8 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}
-    Home Page
-{% endblock title %}
+{% block title %} Home Page {% endblock title %}
 
 
 {% block content %}
