--- a/src/templates/registration/login.html
+++ b/src/templates/registration/login.html
@@ -11,7 +11,7 @@
     <form method="post">
         {% csrf_token %}
         {{ form.as_p }}
-        <button type="submit">Login</button>
+        <button class="btn btn-success ml-4" type="submit">Log in</button>
     </form>
 
 {% endblock content %}
