--- a/src/users/templates/users/signup.html
+++ b/src/users/templates/users/signup.html
@@ -1,5 +1,7 @@
 {% extends "base.html" %}
 
+{% load crispy_forms_tags %}
+
 
 {% block title %}
     Sign Up
@@ -10,8 +12,9 @@
     <h2>Sign Up</h2>
 <form method="post">
     {% csrf_token %}
-    {{ form.as_p }}
-    <button type="submit">Sign Up</button>
+    {{ form|crispy }}
+<!--    {{ form.as_p }}-->
+    <button class="btn btn-success ml-4" type="submit">Sign Up</button>
 </form>
 
 {% endblock content %}
