--- a/src/templates/includes/navbar.html
+++ b/src/templates/includes/navbar.html
@@ -17,6 +17,8 @@
 <!--                            <a class="dropdown-item" href="">Change password</a>-->
 <!--                            <div class="dropdown-divider"></div>-->
                             <a class="dropdown-item" href="{% url 'logout' %}">Log out</a>
+                            <div class="dropdown-divider"></div>
+                            <a class="dropdown-item" href="{% url 'password_change' %}">Password Change</a>
                         </div>
                     </li>
                 </ul>
