--- a/src/templates/includes/navbar.html
+++ b/src/templates/includes/navbar.html
@@ -19,12 +19,15 @@
                             <a class="dropdown-item" href="{% url 'logout' %}">Log out</a>
                             <div class="dropdown-divider"></div>
                             <a class="dropdown-item" href="{% url 'password_change' %}">Password Change</a>
+                            <div class="dropdown-divider"></div>
+                            <a class="dropdown-item" href="{% url 'password_reset' %}">Password Reset</a>
                         </div>
                     </li>
                 </ul>
             {% else %}
                 <form class="form-inline ml-auto">
                     <a href="{% url 'login' %}" class="btn btn-outline-secondary">Log in</a>
+<!--                    <a href="{% url 'password_reset' %}" class="btn btn-outline-secondary ml-2">Reset password</a>-->
                     <a href="{% url 'users:signup' %}" class="btn btn-primary ml-2">Sign up</a>
                 </form>
             {% endif %}
