--- a/src/templates/includes/navbar.html
+++ b/src/templates/includes/navbar.html
@@ -7,11 +7,12 @@
         <div class="collapse navbar-collapse" id="navbarCollapse">
             {% if user.is_authenticated %}
                 <ul class="navbar-nav ml-auto">
+                    <a href="{% url 'articles:article_list' %}"  class="btn btn-primary ml-2">Articles</a>
                     <li class="nav-item">
                         <a class="nav-link dropdown-toggle" href="#" id="userMenu" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                             {{ user.username }}
                         </a>
-                        <div class="dropdown-menu dropdown-menu-right" aria-labelledby="userMenu">
+                        <div class="dropdown-menu dropdown-menu-right ml-2" aria-labelledby="userMenu">
 
                             <div class="dropdown-divider"></div>
 <!--                            <a class="dropdown-item" href="">Change password</a>-->
