--- a/src/articles/templates/articles/article_list.html
+++ b/src/articles/templates/articles/article_list.html
@@ -1,6 +1,5 @@
 {% extends 'base.html' %}
 
-
 {% block title %}Articles{% endblock title %}
 
 {% block content %}
@@ -15,7 +14,7 @@
             <div class="container-fluid">
                 <div class="row">
                     <div class="col-8">
-                        <h2><a href="">{{ article.title }}</a></h2>
+                        <h2><a href="{% url 'articles:article_detail' article.pk %}">{{ article.title }}</a></h2>
                         <p>{{ article.body|truncatewords:22|safe }}...</p>
                         <p>Author: {{ article.author }} | {{ article.create_date|date:'d-m-Y' }}</p>
                     </div>
@@ -26,6 +25,13 @@
         </div>
     </div>
     {% endfor %}
+
+
+    {% if user.is_authenticated %}
+        <a href="{% url 'articles:article_create' %}" class="btn btn-primary ml-2">Create new Article</a>
+    {% else %}
+    <h5>Please <a href="{% url 'login' %}">Login</a> to add Article</h5>
+    {% endif %}
 
 </div>
 {% endblock content %}
