--- a/src/pages/templates/pages/home.html
+++ b/src/pages/templates/pages/home.html
@@ -2,16 +2,14 @@
 
 {% block title %} Home Page {% endblock title %}
 
-
 {% block content %}
-    
-    {% if user.is_authenticated %}
-        Hello {{ user.username }}!!
-        <p><a href="{% url 'logout' %}">Logout</a></p>
-    {% else %}
-        <p>You are not logged in</p>
-        <p><a href="{% url 'login' %}">Login</a></p>
-        <p><a href="{% url 'users:signup' %}">Signup</a></p>
-
-    {% endif %}
+<div class="jumbotron">
+    <div class="container text-center">
+    <h1 class="display-4">My Application</h1>
+    <p class="lead">My Application built with Django</p>
+    <p class="lead">
+        <a href="{% url 'articles:article_list' %}" class="btn btn-primary btn-lg">View All Articles</a>
+    </p>
+    </div>
+</div>
 {% endblock content %}
