--- a/src/templates/includes/navbar.html
+++ b/src/templates/includes/navbar.html
@@ -6,8 +6,10 @@
 
         <div class="collapse navbar-collapse" id="navbarCollapse">
             {% if user.is_authenticated %}
+            <a href="{% url 'articles:article_list' %}" class="btn btn-primary ml-2">Article List</a>
+            <a href="{% url 'articles:article_create' %}" class=" btn btn-primary ml-2">Create New Article</a>
+
                 <ul class="navbar-nav ml-auto">
-                    <a href="{% url 'articles:article_list' %}"  class="btn btn-primary ml-2">Articles</a>
                     <li class="nav-item">
                         <a class="nav-link dropdown-toggle" href="#" id="userMenu" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                             {{ user.username }}
