Change templates article_list.html and article_detail.html for show comments count and comments

--- a/src/articles/templates/articles/article_list.html
+++ b/src/articles/templates/articles/article_list.html
@@ -23,6 +23,9 @@
 
 <!--        </div>-->
         </div>
+        <div class="card-footer">
+            <p>Comments: {{ article.comments.count }}</p>
+        </div>
     </div>
     {% endfor %}
 
