--- a/src/articles/templates/articles/article_detail.html
+++ b/src/articles/templates/articles/article_detail.html
@@ -22,6 +22,12 @@
         <p><a href="{% url 'articles:article_list' %}" role="button" class="btn btn-primary">To Article List</a></p>
         </div>
     </div>
+        <div class="card-footer">
+            <h5>Comments: </h5>
+            {% for comment in article.comments.all %}
+            <p><span class="font-weight-bold">{{ comment.author }} -  </span> {{ comment.comment }}</p>
+            {% endfor %}
+        </div>
 </div>
 </div>
 </div>
