Create static/img/wallpaper.png, set file settings.py, set file base.html, create file includes/banner.html

--- a/src/articles/templates/articles/article_list.html
+++ b/src/articles/templates/articles/article_list.html
@@ -2,6 +2,10 @@
 
 {% block title %}Articles{% endblock title %}
 
+{% block banner %}
+    {% include 'includes/banner.html' %}
+{% endblock banner %}
+
 {% block content %}
 <div class="container">
     <div class="container text-center">
