--- a/src/pages/templates/pages/home.html
+++ b/src/pages/templates/pages/home.html
@@ -1,6 +1,12 @@
 {% extends "base.html" %}
 
+
 {% block title %} Home Page {% endblock title %}
+
+
+{% block banner %}
+    {% include 'includes/banner.html' %}
+{% endblock banner %}
 
 {% block content %}
 <div class="jumbotron">
