--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -1,4 +1,4 @@
-{% load static%}
+{% load static %}
 
 <!DOCTYPE html>
 <html lang="en">
@@ -6,12 +6,16 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-    <title>{% block title %} My App {% endblock title %}</title>
     <link rel="stylesheet" href="{% static 'css/base.css' %}">
+    <title>{% block title %} My App {% endblock title %}</title>
+
 
 </head>
 <body>
 {% include 'includes/navbar.html' %}
+
+{% block banner %}{% endblock banner %}
+
     <main>
         {% block content %}
         {% endblock content %}
