--- a/src/articles/templates/articles/article_detail.html
+++ b/src/articles/templates/articles/article_detail.html
@@ -8,6 +8,11 @@
 <div class="container padding">
 <div class="col-md-12 col-md-offset-2">
     <div class="card" >
+        <div class="text-center">
+            {% if article.image %}
+                <p><img src="{{ article.image.url }}"  class="card-img-fluid" alt="..."></p>
+            {% endif %}
+        </div>
 
         <div class="card-body">
     <div class="post-entry">
