--- a/src/articles/templates/articles/article_list.html
+++ b/src/articles/templates/articles/article_list.html
@@ -37,6 +37,8 @@
         </div>
     </div>
     {% endfor %}
+    
+    {% include 'includes/pagination.html' with page=page_obj %}
 
 
     {% if user.is_authenticated %}
