Make operation-set for create footer

--- a/src/static/css/base.css
+++ b/src/static/css/base.css
@@ -104,6 +104,10 @@ footer{
 footer h2{
     color: white;
 }
+
+footer h5{
+    color: white;
+}
 /*
 body {
     font-family: 'Source Sans Pro', sans-serif;
