--- a/src/articles/templates/articles/article_list.html
+++ b/src/articles/templates/articles/article_list.html
@@ -40,12 +40,13 @@
     
     {% include 'includes/pagination.html' with page=page_obj %}
 
-
+    <div class="container text-center my-3">
     {% if user.is_authenticated %}
         <a href="{% url 'articles:article_create' %}" class="btn btn-primary ml-2">Create new Article</a>
     {% else %}
     <h5>Please <a href="{% url 'login' %}">Login</a> to add Article</h5>
     {% endif %}
+    </div>
 
 </div>
 {% endblock content %}
