--- a/src/pages/templates/pages/home.html
+++ b/src/pages/templates/pages/home.html
@@ -14,7 +14,7 @@
     <h1 class="display-4">My Application</h1>
     <p class="lead">My Application built with Django</p>
     <p class="lead">
-        <a href="{% url 'articles:article_list' %}" class="btn btn-primary btn-lg">View All Articles</a>
+        <a href="{% url 'articles:article_list' %}" class="btn btn-primary btn-lg">Перейти к списку статей</a>
     </p>
     </div>
 </div>
