--- a/src/templates/includes/footer.html
+++ b/src/templates/includes/footer.html
@@ -2,7 +2,7 @@
     <div class="container">
         <div class="row padding text-center">
             <div class="col-12">
-                <h5>This Site is made by Django</h5>
+                <h5>Сайт зделан на фреймворках Django и Bootstrap</h5>
             </div>
                   <div class="col-12 text-center py-1">Copyright © 2020.
                         <a href=""> All rights reserved</a>
