--- a/src/articles/templates/articles/article_list.html
+++ b/src/articles/templates/articles/article_list.html
@@ -9,40 +9,46 @@
 {% block content %}
 <div class="container">
     <div class="container text-center">
-        <p> <h1>Articles:</h1> </p>
+        <p> <h1>Список статей:</h1> </p>
     </div>
-    {% for article in object_list %}
-    <div class="card my-2" >
-        <div class="card-body">
+
+{% include 'includes/pagination.html' with page=page_obj %}
+
 <!--        <div class="post-entry">-->
             <div class="container-fluid">
-                <div class="row">
-                    <div class="col-8">
+                <div class="card-deck">
+                    {% for article in object_list %}
+<!--                    <div class="col-12 col-sm-4">-->
+                        <div class="card border-info mb-3 my-2 mx-2" >
+                        <div class="card-body">
                         <h2><a href="{% url 'articles:article_detail' article.pk %}">{{ article.title }}</a></h2>
-                        <p>{{ article.body|truncatewords:22|safe }}...</p>
+<!--                        <p>{{ article.body|truncatewords:22|safe }}...</p>-->
                         <p>Author: {{ article.author }} | {{ article.create_date|date:'d-m-Y' }}</p>
-                    </div>
-                    <div class="col-4">
+<!--                        <a href="{% url 'articles:article_detail' article.pk %}" class="btn btn-primary my-3">Перейти</a>-->
                         {% if article.image %}
-                        <p><a href="{% url 'articles:article_detail' article.pk %}"><img src="{{ article.image.url }}" style="max-width:200px; max-height:200px;" alt=""></a></p>
+                        <a href="{% url 'articles:article_detail' article.pk %}"><img src="{{ article.image.url }}" style="max-width:300px; max-height:300px;" class="card-img-bottom" alt=""></a>
                         {% endif %}
                     </div>
-                </div>'
-            </div>
+                            <div class="card-footer text-white bg-secondary">
+                            <p>Комментарии: {{ article.comments.count }} шт</p>
+                            </div>
+                </div>
+<!--            </div>-->
 
 <!--        </div>-->
+
+                    {% endfor %}
+
         </div>
-        <div class="card-footer">
-            <p>Comments: {{ article.comments.count }}</p>
-        </div>
+
     </div>
-    {% endfor %}
+
     
     {% include 'includes/pagination.html' with page=page_obj %}
 
     <div class="container text-center my-3">
     {% if user.is_authenticated %}
-        <a href="{% url 'articles:article_create' %}" class="btn btn-primary ml-2">Create new Article</a>
+        <a href="{% url 'articles:article_create' %}" class="btn btn-primary ml-2">Создать новую статью</a>
     {% else %}
     <h5>Please <a href="{% url 'login' %}">Login</a> to add Article</h5>
     {% endif %}
