--- a/src/articles/templates/articles/article_new.html
+++ b/src/articles/templates/articles/article_new.html
@@ -1,15 +1,15 @@
 {% extends "base.html" %}
 
 
-{% block title %}Create{% endblock title %}
+{% block title %}Create Article{% endblock title %}
 
 
 {% block content %}
-    <h1>Create New Article</h1>
+    <h1>Создать новую статью:</h1>
 <form method="post" enctype="multipart/form-data">
     {% csrf_token %}
     {{ form.as_p }}
-    <input type="submit" class="btn btn-success ml-2" value="Save">
+    <input type="submit" class="btn btn-success ml-2" value="Сохранить">
 </form>
 
 {% endblock content %}
