--- a/src/templates/includes/navbar.html
+++ b/src/templates/includes/navbar.html
@@ -9,7 +9,7 @@
         <div class="collapse navbar-collapse" id="navbarCollapse">
             {% if user.is_authenticated %}
 <!--            <a href="{% url 'articles:article_list' %}" class="btn btn-primary ml-2">Article List</a>-->
-            <a href="{% url 'articles:article_create' %}" class=" btn btn-primary ml-2">Create New Article</a>
+            <a href="{% url 'articles:article_create' %}" class=" btn btn-primary ml-2">Создать Статью</a>
 
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
