--- a/src/templates/registration/password_change_form.html
+++ b/src/templates/registration/password_change_form.html
@@ -12,7 +12,7 @@ w password twice so we can verify you typed it in correctly.</p>
 <form method="post">
     {% csrf_token %}
     {{ form.as_p }}
-    <input type="submit" class="btn btn-success" value="Change my password">
+    <input type="submit" class="btn btn-success" value="Change password">
 </form>
 
 {% endblock content %}
