--- a/src/articles/templates/articles/article_list.html
+++ b/src/articles/templates/articles/article_list.html
@@ -26,7 +26,8 @@
                         <p>Author: {{ article.author }} | {{ article.create_date|date:'d-m-Y' }}</p>
 <!--                        <a href="{% url 'articles:article_detail' article.pk %}" class="btn btn-primary my-3">Перейти</a>-->
                         {% if article.image %}
-                        <a href="{% url 'articles:article_detail' article.pk %}"><img src="{{ article.image.url }}" style="max-width:300px; max-height:300px;" class="card-img-bottom" alt=""></a>
+                        <a href="{% url 'articles:article_detail' article.pk %}"><img src="{{ article.image.url }}" style="max-width:300px; max-height:300px;" class="img-thumbnail "></a>
+                            <!--style="max-width:300px; max-height:300px;" class="card-img-bottom" alt=""-->
                         {% endif %}
                     </div>
                             <div class="card-footer text-white bg-secondary">
@@ -46,13 +47,13 @@
     
     {% include 'includes/pagination.html' with page=page_obj %}
 
-    <div class="container text-center my-3">
-    {% if user.is_authenticated %}
-        <a href="{% url 'articles:article_create' %}" class="btn btn-primary ml-2">Создать новую статью</a>
-    {% else %}
-    <h5>Please <a href="{% url 'login' %}">Login</a> to add Article</h5>
-    {% endif %}
-    </div>
+<!--    <div class="container text-center my-3">-->
+<!--    {% if user.is_authenticated %}-->
+<!--        <a href="{% url 'articles:article_create' %}" class="btn btn-primary ml-2">Создать новую статью</a>-->
+<!--    {% else %}-->
+<!--    <h5>Please <a href="{% url 'login' %}">Login</a> to add Article</h5>-->
+<!--    {% endif %}-->
+<!--    </div>-->
 
 </div>
 {% endblock content %}
