--- a/src/pages/templates/pages/home.html
+++ b/src/pages/templates/pages/home.html
@@ -9,13 +9,37 @@
 {% endblock banner %}
 
 {% block content %}
-<div class="jumbotron">
-    <div class="container text-center">
-    <h1 class="display-4">My Application</h1>
-    <p class="lead">My Application built with Django</p>
-    <p class="lead">
-        <a href="{% url 'articles:article_list' %}" class="btn btn-primary btn-lg">Перейти к списку статей</a>
-    </p>
+<!--<div class="jumbotron">-->
+<!--            <div class="card text-white bg-info mb-3">-->
+            <div class="container-fluid">
+            <div class="card text-white bg-secondary mb-3">
+
+                <div class="card-body">
+    <div class="text-center">
+        <h1 class="display-4">My Application</h1>
     </div>
-</div>
+    <div class="container">
+        <p class="lead">
+            My Application built with Django. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+            Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+        </p>
+        <p class="lead">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+            Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+            Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+            Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+        </p>
+    </div>
+                </div>
+            <div class="card-footer">
+                <div class="text-center">
+                     <p class="lead">
+                        <a href="{% url 'articles:article_list' %}" class="btn btn-primary btn-lg">Перейти к списку статей</a>
+                    </p>
+                </div>
+            </div>
+
+            </div>
+                </div>
+<!--</div>-->
 {% endblock content %}
