--- a/src/templates/includes/navbar.html
+++ b/src/templates/includes/navbar.html
@@ -7,9 +7,28 @@
         </button>
 
         <div class="collapse navbar-collapse" id="navbarCollapse" >
+<!--            <ul class="navbar-nav">-->
+            <ul class="nav nav">
+                <li class="nav-item active">
+                    <a class="nav-link" href="{% url 'pages:home' %}">Главная<span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'articles:article_list' %}">Статьи</a>
+                </li>
+<!--                <li class="nav-item">-->
+<!--                    <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Работа</a>-->
+<!--                </li>-->
+<!--                <li class="nav-item">-->
+<!--                    <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Погода</a>-->
+<!--                </li>-->
+<!--                <li class="nav-item">-->
+<!--                    <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>-->
+<!--                </li>-->
+            </ul>
+
             {% if user.is_authenticated %}
 <!--            <a href="{% url 'articles:article_list' %}" class="btn btn-primary ml-2">Article List</a>-->
-            <a href="{% url 'articles:article_create' %}" class=" btn btn-primary ml-2">Создать Статью</a>
+<!--            <a href="{% url 'articles:article_create' %}" class=" btn btn-primary ml-2">Создать Статью</a>-->
 
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
@@ -26,15 +45,20 @@
                             <a class="dropdown-item" href="{% url 'password_change' %}">Password Change</a>
                             <div class="dropdown-divider"></div>
                             <a class="dropdown-item" href="{% url 'password_reset' %}">Password Reset</a>
+                            <div class="dropdown-divider"></div>
+                            <a class='dropdown-item' href="{% url 'articles:article_create' %}">Create New Article</a>
+                            <div class="dropdown-divider"></div>
+                            <a class="dropdown-item" href="{% url 'articles:article_my_list' %}">All My Articles</a>
                         </div>
                     </li>
                 </ul>
             {% else %}
                 <form class="form-inline ml-auto">
-                    <a href="{% url 'login' %}" class="btn btn-outline-secondary">Log in</a>
 <!--                    <a href="{% url 'password_reset' %}" class="btn btn-outline-secondary ml-2">Reset password</a>-->
+                    <a href="{% url 'login' %}" class="btn btn-outline-secondary ml-2">Log in</a>
                     <a href="{% url 'users:signup' %}" class="btn btn-primary ml-2">Sign up</a>
                 </form>
             {% endif %}
         </div>
     </nav>
+
