--- a/src/templates/registration/login.html
+++ b/src/templates/registration/login.html
@@ -12,6 +12,7 @@
         {% csrf_token %}
         {{ form.as_p }}
         <button class="btn btn-success ml-4" type="submit">Log in</button>
+        <a href="{% url 'password_reset' %}" class="btn btn-outline-secondary ml-2">Password Reset</a>
     </form>
 
 {% endblock content %}
