Change disign of site

--- a/src/pages/templates/pages/home.html
+++ b/src/pages/templates/pages/home.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-
+{% load static %}
 
 {% block title %} Home Page {% endblock title %}
 
@@ -9,37 +9,145 @@
 {% endblock banner %}
 
 {% block content %}
+<section class="text-center">
+    <div class="container">
+<!--      <h1>Album example</h1>-->
+<!--        <hr class="my-4">-->
+        <h1 class="display-4">My Application</h1>
+      <p class="lead text-muted">Something short and leading about the collection below—its contents, the creator, etc. Make it short and sweet, but not too short so folks don’t simply skip over it entirely.</p>
+      <p class="lead text-muted">My Application built with Django. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+      </p>
+        <hr class="my-4">
+        <!--      <p>-->
+<!--        <a href="#" class="btn btn-primary my-2">Main call to action</a>-->
+<!--        <a href="#" class="btn btn-secondary my-2">Secondary action</a>-->
+<!--      </p>-->
+    </div>
+  </section>
+
+<!--<div class="album py-3 bg-light">-->
+<div class="album py-4 bg-light">
+    <div class="container">
+      <div class="row">
+
+        <div class="col-md-6">
+            <div class="card mb-3" style="max-width: 540px;">
+  <div class="row no-gutters">
+    <div class="col-md-4">
+      <img src="{% static 'img/statia_5_308.png' %}" class="card-img" alt="...">
+    </div>
+    <div class="col-md-8">
+      <div class="card-body">
+        <h5 class="card-title">Card title</h5>
+        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.
+        <a href="{% url 'articles:article_list' %}">Перейти...</a>
+        </p>
+<!--        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>-->
+<!--           <a href="{% url 'articles:article_list' %}" class="btn btn-primary ">Перейти к списку статей</a>-->
+
+      </div>
+    </div>
+  </div>
+</div>
+<!--          <div class="card mb-6 shadow-sm">-->
+<!--&lt;!&ndash;            <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: Thumbnail"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>&ndash;&gt;-->
+<!--            <div class="card-body">-->
+<!--              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>-->
+
+<!--                <div class="text-center">-->
+<!--                     <p class="lead">-->
+<!--                        <a href="{% url 'articles:article_list' %}" class="btn btn-primary btn-lg">Перейти к списку статей</a>-->
+<!--                    </p>-->
+<!--                </div>-->
+<!--              <div class="d-flex justify-content-between align-items-center">-->
+<!--                <div class="btn-group">-->
+<!--                  <button type="button" class="btn btn-sm btn-outline-secondary">View</button>-->
+<!--                  <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>-->
+<!--                </div>-->
+<!--                <small class="text-muted">9 mins</small>-->
+<!--              </div>-->
+
+<!--            </div>-->
+<!--          </div>-->
+        </div>
+
+<div class="col-md-6">
+          <div class="card mb-3" style="max-width: 540px;">
+  <div class="row no-gutters">
+    <div class="col-md-4">
+      <img src="{% static 'img/parsing_1_308.png' %}" class="card-img" alt="...">
+    </div>
+    <div class="col-md-8">
+      <div class="card-body">
+        <h5 class="card-title">Card title</h5>
+        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.
+            <a href="#">Перейти...</a>
+        </p>
+<!--        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>-->
+<!--           <a href="#" class="btn btn-primary btn-lg">Перейти к парсеру</a>-->
+      </div>
+    </div>
+  </div>
+</div>
+    </div>
+<!--          <div class="col-md-6">-->
+<!--          <div class="card mb-6 shadow-sm">-->
+<!--            <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: Thumbnail"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>-->
+<!--            <div class="card-body">-->
+<!--              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>-->
+<!--              <div class="d-flex justify-content-between align-items-center">-->
+<!--                <div class="btn-group">-->
+<!--                  <button type="button" class="btn btn-sm btn-outline-secondary">View</button>-->
+<!--                  <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>-->
+<!--                </div>-->
+<!--                <small class="text-muted">9 mins</small>-->
+<!--              </div>-->
+
+<!--                <div class="text-center">-->
+<!--                     <p class="lead">-->
+<!--                        <a href="#" class="btn btn-primary btn-lg">Перейти к парсеру</a>-->
+<!--                    </p>-->
+
+<!--            </div>-->
+            </div>
+          </div>
+        </div>
+
+           </div>
+          </div>
+        </div>
 <!--<div class="jumbotron">-->
 <!--            <div class="card text-white bg-info mb-3">-->
-            <div class="container-fluid">
-            <div class="card text-white bg-secondary mb-3">
+<!--            <div class="container-fluid">-->
+<!--&lt;!&ndash;            <div class="card text-white bg-secondary mb-3">&ndash;&gt;-->
+<!--            <div class="card mb-3">-->
 
-                <div class="card-body">
-    <div class="text-center">
-        <h1 class="display-4">My Application</h1>
-    </div>
-    <div class="container">
-        <p class="lead">
-            My Application built with Django. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-            Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-        </p>
-        <p class="lead">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-            Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-            Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-            Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-        </p>
-    </div>
-                </div>
-            <div class="card-footer">
-                <div class="text-center">
-                     <p class="lead">
-                        <a href="{% url 'articles:article_list' %}" class="btn btn-primary btn-lg">Перейти к списку статей</a>
-                    </p>
-                </div>
-            </div>
+<!--                <div class="card-body">-->
+<!--    <div class="text-center">-->
+<!--        <h1 class="display-4">My Application</h1>-->
+<!--    </div>-->
+<!--    <div class="container">-->
+<!--        <p class="lead">-->
+<!--            My Application built with Django. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.-->
+<!--            Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.-->
+<!--        </p>-->
+<!--        <p class="lead">-->
+<!--            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.-->
+<!--            Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.-->
+<!--            Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.-->
+<!--            Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.-->
+<!--        </p>-->
+<!--    </div>-->
+<!--                </div>-->
+<!--            <div class="card-footer">-->
+<!--                <div class="text-center">-->
+<!--                     <p class="lead">-->
+<!--                        <a href="{% url 'articles:article_list' %}" class="btn btn-primary btn-lg">Перейти к списку статей</a>-->
+<!--                    </p>-->
+<!--                </div>-->
+<!--            </div>-->
 
-            </div>
-                </div>
+<!--            </div>-->
+<!--                </div>-->
 <!--</div>-->
 {% endblock content %}
