--- a/src/articles/templates/articles/article_detail.html
+++ b/src/articles/templates/articles/article_detail.html
@@ -10,7 +10,8 @@
     <div class="card border-info mb-3" >
         <div class="text-center">
             {% if article.image %}
-                <p><img src="{{ article.image.url }}"  class="card-img-top" alt="..."></p>
+<!--                <p><img src="{{ article.image.url }}"  style="max-width:50%; max-height:50%;" class="card-img-top my-4 " alt="..."></p>-->
+                <p><img src="{{ article.image.url }}"  style="max-width:50%; max-height:auto;" class="img-fluid my-4 " alt="..."></p>
             {% endif %}
         </div>
 
@@ -59,6 +60,12 @@
             </div>
         </div>
     </div>
+{% else %}
+<div class="container text-center">
+    <p>
+    <h4>Чтоб оставить комментарий - войдите в свой <a href="{% url 'login' %}">аккаунт</a>  или <a href="{% url 'users:signup' %}">зарегистрируйтесь</a> </h4>
+    </p>
+</div>
 {% endif %}
 
 {% endblock content %}
