--- a/src/templates/includes/navbar.html
+++ b/src/templates/includes/navbar.html
@@ -1,7 +1,7 @@
  {% load static %}
 
     <nav class="navbar navbar-expand-md navbar-dark bg-dark mb-4" >
-        <a class="navbar-brand " href="{% url 'pages:home' %}"><img src="{% static 'img/logo_1.png' %}" style="max-width:50px; max-height:50px;" alt=""> My Application</a>
+        <a class="navbar-brand " href="{% url 'pages:home' %}"><img src="{% static 'img/logo_site_2_thumb.png' %}" style="max-width:50px; max-height:50px;" alt="">           My Application</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
