--- a/src/templates/includes/pagination.html
+++ b/src/templates/includes/pagination.html
@@ -5,7 +5,7 @@
       {% endif %}
       {% if page.has_previous %}
     <li class="page-item">
-      <a class="page-link" href="?page={{page.previous_page_number}}">Предыдущая</a>
+      <a class="page-link" href="?page={{page.previous_page_number}}"><<<</a>
     </li>
       {% endif %}
       <!--        {% for n in page.paginator.page_range %}-->
@@ -14,7 +14,7 @@
       {% for n in page.paginator.page_range %}
       {% if page.number == n %}
         <li class="page-item active "><a class="page-link" href="?page={{ n }}">{{ n }}</a></li>
-      {% elif n > page.number|add:-3 and n < page.number|add:3 %}
+      {% elif n > page.number|add:-2 and n < page.number|add:2 %}
         <li class="page-item"><a class="page-link" href="?page={{ n }}">{{ n }}</a></li>
       {% endif %}
       {% endfor %}
@@ -23,7 +23,7 @@
 
       {% if page.has_next %}
       <li class="page-item">
-      <a class="page-link" href="?page={{ page.next_page_number }}">Следующая</a>
+      <a class="page-link" href="?page={{ page.next_page_number }}">>>></a>
       </li>
       {% endif %}
   </ul>
