--- a/src/templates/includes/banner.html
+++ b/src/templates/includes/banner.html
@@ -2,8 +2,8 @@
         <div class="container">
             <div class="row text-center">
                 <div class="col-lg-6 col-lg-offset-2 ">
-                    <h1>This is the Articles Project</h1>
-                    <h2>проект сайта статей</h2>
+                    <h1>This is the Site Project</h1>
+                    <h2>проект сайта на Django</h2>
                 </div>
             </div>
         </div>
