--- a/src/articles/templates/articles/article_list.html
+++ b/src/articles/templates/articles/article_list.html
@@ -12,7 +12,9 @@
         <p> <h1>Все статьи:</h1> </p>
     </div>
 
-{% include 'includes/pagination.html' with page=page_obj %}
+    {% if page_obj.paginator.num_pages > 1 %}
+        {% include 'includes/pagination.html' with page=page_obj %}
+    {% endif %}
 
 <!--        <div class="post-entry">-->
 <!--            <div class="container-fluid">-->
@@ -50,8 +52,21 @@
         </div>
         </div>
 
-    
-    {% include 'includes/pagination.html' with page=page_obj %}
+    {% if page_obj.paginator.num_pages > 1 %}
+        {% include 'includes/pagination.html' with page=page_obj %}
+    {% endif %}
+
+    {% if user.is_authenticated %}
+        <div class="container text-center">
+            <a href="{% url 'articles:article_create' %}" class="btn btn-secondary my-3">Добавить статью</a>
+        </div>
+    {% else %}
+        <div class="container text-center ">
+            <p>
+            <h4>Чтоб добавить статью - войдите в свой <a href="{% url 'login' %}">аккаунт</a>  или <a href="{% url 'users:signup' %}">зарегистрируйтесь</a> </h4>
+            </p>
+        </div>
+    {% endif %}
 
 <!--    <div class="container text-center my-3">-->
 <!--    {% if user.is_authenticated %}-->
