Change disign of main page_1

--- a/src/pages/templates/pages/home.html
+++ b/src/pages/templates/pages/home.html
@@ -14,7 +14,7 @@
 <!--      <h1>Album example</h1>-->
 <!--        <hr class="my-4">-->
         <h1 class="display-4">Welcome to the Site Project</h1>
-      <p class="lead text-muted">Добро пожаловать на этот проект сайта. Данный сайт сделан с целью изучения возможностей фреймворка Django и других сопутствующих программ, технологий и фреймворков.</p>
+      <p class="lead text-muted">Добро пожаловать на этот проект сайта. Данный сайт создан, как результат изучения возможностей фреймворка Django и других сопутствующих программ, технологий и фреймворков.</p>
       <p class="lead text-muted">На данный момент на сайте работает раздел "Статьи". После регистрации и авторизации сюда можно добавлять, изменять и удалять свои статьи. Так же для авторизованых пользователей есть возможность оставлять комментарии к статьям раздела.
       </p>
         <p class="lead text-muted">В дальнейшем на сайт будут добавляться и другие разделы и новый функционал. На очереди - Парсер сайтов с вакансиями, где можно будет произвести поиск выбраных по параметрам вакансий на четырех самых больших порталах с вакансиями.
