Change disign of main page_3

--- a/src/pages/templates/pages/home.html
+++ b/src/pages/templates/pages/home.html
@@ -14,18 +14,35 @@
 <!--      <h1>Album example</h1>-->
 <!--        <hr class="my-4">-->
         <h1 class="display-4">Welcome to the Site Project</h1>
-      <p class="lead text-muted">Добро пожаловать на этот проект сайта. Данный сайт создан, как результат изучения возможностей фреймворка Django и других сопутствующих программ, технологий и фреймворков.</p>
-      <p class="lead text-muted">На данный момент на сайте работает раздел "Статьи". После регистрации и авторизации на сайте - можно добавлять, изменять и удалять свои статьи. Так же для авторизованых пользователей есть возможность оставлять комментарии к статьям раздела.
+
+          <h3> Добро пожаловать на сайт!! </h3>
+</div>
+
+<div class="container">
+    <hr class="my-4">
+         <p class="lead text-muted " >
+             Этот проект создан, как результат изучения возможностей фреймворка Django и других сопутствующих программ, технологий и фреймворков.
+        </p>
+    <hr class="my-4">
+    <p class="lead text-muted " >
+        На данный момент на сайте работает раздел "Статьи".
+        После регистрации и авторизации на сайте - можно добавлять, изменять и удалять свои статьи.
+        Так же для авторизованых пользователей есть возможность оставлять комментарии к статьям раздела.
+          </p>
+    <hr class="my-4">
+        <p class="lead text-muted " >
+          В дальнейшем на сайт будут добавляться и другие разделы и новый функционал.
+          На очереди - Парсер сайтов с вакансиями, где можно будет произвести поиск выбраных по параметрам вакансий на четырех самых больших порталах с предложениями работы.
       </p>
-        <p class="lead text-muted">В дальнейшем на сайт будут добавляться и другие разделы и новый функционал. На очереди - Парсер сайтов с вакансиями, где можно будет произвести поиск выбраных по параметрам вакансий на четырех самых больших порталах с предложениями работы.
-        <p>
-        <hr class="my-4">
+
+
+    </div>
         <!--      <p>-->
 <!--        <a href="#" class="btn btn-primary my-2">Main call to action</a>-->
 <!--        <a href="#" class="btn btn-secondary my-2">Secondary action</a>-->
 <!--      </p>-->
-    </div>
-  </section>
+    </section>
+
 
 <!--<div class="album py-3 bg-light">-->
 <div class="album py-4 bg-light">
@@ -42,8 +59,8 @@
       <div class="card-body">
         <h5 class="card-title">Статьи</h5>
         <p class="card-text">Раздел, где можно читать, розмещать и комментировать различные статьи.
-        <a href="{% url 'articles:article_list' %}">Перейти...</a>
         </p>
+          <a href="{% url 'articles:article_list' %}">Перейти...</a>
 <!--        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>-->
 <!--           <a href="{% url 'articles:article_list' %}" class="btn btn-primary ">Перейти к списку статей</a>-->
 
@@ -83,8 +100,8 @@
       <div class="card-body">
         <h5 class="card-title">Поиск работы (в разработке)</h5>
         <p class="card-text">Парсинг четырех сайтов с вакансиями по нужным параметрам.
-            <a href="#">Перейти...</a>
         </p>
+          <a href="#">Перейти...</a>
 <!--        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>-->
 <!--           <a href="#" class="btn btn-primary btn-lg">Перейти к парсеру</a>-->
       </div>
