Change disign of main page_4

--- a/src/pages/templates/pages/home.html
+++ b/src/pages/templates/pages/home.html
@@ -21,7 +21,7 @@
 <div class="container">
     <hr class="my-4">
          <p class="lead text-muted " >
-             Этот проект создан, как результат изучения возможностей фреймворка Django и других сопутствующих программ, технологий и фреймворков.
+             Этот проект создан, как результат изучения и использования возможностей фреймворка Django,  и других сопутствующих фреймворков (Bootstrap), технологий и программ.
         </p>
     <hr class="my-4">
     <p class="lead text-muted " >
